2007-07-08  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot.1.in: Fix typo.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot.1.in: Add --force and --session-name options
	to the synopsis.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #401158.

	* bin/schroot/schroot.1.in: Reorder options and group into
	subsections.  Split the examples section into subsections and add
	a "Sessions" subsection to explain how to use sessions.

	* bin/schroot/schroot.conf.5.in: Add \: breakpoints for a long
	regex.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #398679 and #401159.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* bin/dchroot/dchroot-session-base.cc,
	bin/dchroot/dchroot-session.cc: Don't include unused uuid.h.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-chroot-block-device.cc, test/sbuild-chroot.cc,
	test/sbuild-chroot-file.cc, test/sbuild-chroot-lvm-snapshot.cc,
	test/sbuild-chroot-plain.cc: Add CHROOT_SCRIPT_CONFIG to
	environment checks.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document --session-name.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* TODO: Add permissions check items.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc: Initialise lock_status to true.
	(setup_chroot): Add debugging code to log state on call.  If
	lock_status is false, return without doing anything.  If initial
	lock acquistion or release fails, set lock_status to false.  This
	ensures that no setup script will run on or after lock failure.

	* sbuild/sbuild-session.h: Add lock_status member.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-main-base.cc (run_impl): When no chroots
	were found and one of the --all options was used, do not treat as
	a fatal error.

2007-07-08  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-main-base.cc (run_impl): Call